# kstock-account

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst  kstock_account.rst  modules.rst
examples/: common.py  portfolio_optimization.py  risk_return_ratio.py
examples/portfolio_optimization/: pyproject.toml
examples/portfolio_optimization/scripts/: hierarchical_risk_parity.py  mean_variance_portfolio.py
examples/risk_return_ratio/: pyproject.toml
examples/risk_return_ratio/scripts/: common.py  risk_return_ratio.py
kstock_account/: exceptions.py  mirae.py  samsung.py  schemas.py  utils.py
stock_account/: mirae.py  samsung.py  schemas.py
