[tool.poetry]
name = "kstock-account"
version = "0.1.0"
description = ""
authors = ["Seungjae Park <astro.psj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.example.dependencies]
numpy = "^2.0.0"
pandas = "^2.2.2"
yfinance = "^0.2.40"

[tool.black]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
