[tool.poetry]
name = "kstock-account"
version = "0.1.0"
description = "Unofficial Korean Securities Company Account Inquiry Library"
license = "MIT"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Astro36/kstock-account"
keywords = ["poetry", "selenium", "stock-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
]
exclude = ["examples"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
types-requests = "^2.32.0"

[tool.black]
line-length = 200

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
