[tool.poetry]
name = "kstock-account"
version = "0.1.0"
description = "Unofficial Korean Securities Company Account Inquiry Library"
license = "MIT"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Astro36/kstock-account"
keywords = ["poetry", "selenium", "stock-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
]
exclude = ["examples"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
types-requests = "^2.32.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
fix = true
line-length = 120
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "D",   # pydocstyle
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "B904", # use 'raise ... from err'
]

[tool.ruff.lint.pydocstyle]
convention = "google"
