[tool.poetry]
package-mode = false
name = "portfolio-optimization"
version = "0.1.0"
description = "Portfolio Optimization Example Code"
authors = ["Seungjae Park <astro.psj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cvxpy = "^1.5.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.14.0"
yfinance = "^0.2.40"
kstock-account = {path = "../.."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
